--- a/XL_Inversion.ipynb
+++ b/XL_Inversion.ipynb
@@ -316,7 +316,7 @@
     "\n",
     "        # Prompt Parametrs\n",
     "        lora_scale = [0.6]  \n",
-    "        time_ids = base._get_add_time_ids(list(imgs[0].shape[2:4]),[0,0],[1024,1024],dtype=XLunet.dtype).to(XLunet.device)\n",
+    "        time_ids = torch.tensor(list(imgs[0].shape[2:4])+[0,0]+[1024,1024]).to(XLunet.dtype).to(XLunet.device)\n",
     "\n",
     "    \n",
     "    with torch.enable_grad():\n",
